# mini_dex_core

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-05caf033536aba285be681aeedf01c737dbeed41ec5c39cacc63c3b5ef1d7493.json
migrations/: 20250820182147_create_trades_table.up.sql
src/: main.rs  matching_engine.rs
